--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html> 
+<html>
 
 <head>
-    <meta charset=utf-8/>
+    <meta charset=utf-8 />
     <script src='js/d3.v6.1.1/d3.min.js'></script>
-    <link rel="stylesheet" href="style.css"></link>
+    <link rel="stylesheet" href="style.css">
+    </link>
 </head>
 
 
@@ -14,7 +15,13 @@
 
     <div id="vis-holder">
     </div>
-    
+
+    <div id="scatterplot-2">
+    </div>
+
+    <div id="barchart">
+    </div>
+
 
     <script src='js/brushinglinking.js'></script>
 </body>
